--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -20,5 +20,6 @@ jobs:
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_THEELEFIT_3F6C6 }}
-          channelId: live
           projectId: theelefit-3f6c6
+          channelId: live
+          firebaseHostingTarget: theelefit-hosting
